@@ -2,7 +2,6 @@
 
 INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/sys
 
-bin_PROGRAMS = afile achfile
+bin_PROGRAMS = achfile
 
-afile_SOURCES = afile.c common.c common.h
 achfile_SOURCES = achfile.c common.c common.h
